# 2DCharacterController

./: 2DCharacterController.sln  LICENSE  README.md
2DCharacterController/: 2DCharacterController.vcxproj
2DCharacterController/src/: Main.cpp
2DCharacterController/x64/Debug/: 2DCharacterController.exe.recipe  2DCharacterController.ilk  vc143.idb
2DCharacterController/x64/Debug/2DCharac.187fd878.tlog/: 2DCharacterController.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
project/: CMakeLists.txt  imgui.ini
project/res/: levelConfig.txt
project/src/: AABB.cpp  AABB.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Game.cpp  Game.h  GameObject.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  Solid.cpp  Solid.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
project/src/Managers/: CollisionManager.cpp  CollisionManager.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  UIManager.cpp  UIManager.h
project/src/shaders/: AABBTesting.glsl  Basic.glsl  Basic.shader
